--- a/Subtle.Test/Subtle.Test.csproj
+++ b/Subtle.Test/Subtle.Test.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F78C0D7A-0248-416B-A5EB-6B20E7F57CA9}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{CBB3A7E5-7963-4483-837C-BC81771A4CD1}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Subtle.Model</RootNamespace>
-    <AssemblyName>Subtle.Model</AssemblyName>
+    <RootNamespace>Subtle.Test</RootNamespace>
+    <AssemblyName>Subtle.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,8 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CookComputing.XmlRpcV2, Version=3.0.0.0, Culture=neutral, PublicKeyToken=a7d6e17aa302004d, processorArchitecture=MSIL">
-      <HintPath>..\packages\xmlrpcnet.3.0.0.266\lib\net20\CookComputing.XmlRpcV2.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -44,48 +47,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileTypes.cs" />
-    <Compile Include="Helpers\Crypto.cs" />
-    <Compile Include="Helpers\Gzip.cs" />
-    <Compile Include="IOSDbProxy.cs" />
-    <Compile Include="OSDbClient.cs" />
-    <Compile Include="OSDbConfig.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>OSDbConfig.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Requests\SearchSettings.cs" />
-    <Compile Include="Requests\TagSearchQuery.cs" />
-    <Compile Include="Requests\FullTextSearchQuery.cs" />
-    <Compile Include="Requests\ImdbSearchQuery.cs" />
-    <Compile Include="Requests\HashSearchQuery.cs" />
-    <Compile Include="Requests\SearchQuery.cs" />
-    <Compile Include="Responses\ImdbSearchResult.cs" />
-    <Compile Include="Responses\ImdbSearchResultCollection.cs" />
-    <Compile Include="Responses\Language.cs" />
-    <Compile Include="Responses\LanguageCollection.cs" />
-    <Compile Include="Responses\OSDbResponse.cs" />
-    <Compile Include="Responses\ServerInfo.cs" />
-    <Compile Include="Responses\Session.cs" />
-    <Compile Include="Responses\SubtitleFile.cs" />
-    <Compile Include="Responses\SubtitleFileCollection.cs" />
-    <Compile Include="Responses\SubtitleSearchResult.cs" />
-    <Compile Include="Responses\SubtitleSearchResultCollection.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="OSDbConfig.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>OSDbConfig.cs</LastGenOutput>
-      <Parameters>&lt;%3fxml version="1.0" encoding="utf-16"%3f&gt;
-&lt;ArrayOfParameterStorage xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" /&gt;</Parameters>
-    </Content>
+    <ProjectReference Include="..\Subtle.Model\Subtle.Model.csproj">
+      <Project>{f78c0d7a-0248-416b-a5eb-6b20e7f57ca9}</Project>
+      <Name>Subtle.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
