--- a/Subtle.UI/Subtle.UI.csproj
+++ b/Subtle.UI/Subtle.UI.csproj
@@ -65,6 +65,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\SearchMethod.cs" />
     <Compile Include="ViewModels\SubtitleViewModel.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -108,7 +109,6 @@
   <ItemGroup>
     <None Include="Resources\Featured.png" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
