--- a/Subtle.Model/Subtle.Model.csproj
+++ b/Subtle.Model/Subtle.Model.csproj
@@ -47,6 +47,7 @@
     <Compile Include="FileTypes.cs" />
     <Compile Include="Helpers\Crypto.cs" />
     <Compile Include="Helpers\Gzip.cs" />
+    <Compile Include="Helpers\ImdbHelper.cs" />
     <Compile Include="IOSDbProxy.cs" />
     <Compile Include="OSDbClient.cs" />
     <Compile Include="OSDbConfig.cs">
@@ -55,7 +56,7 @@
       <DependentUpon>OSDbConfig.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Requests\SearchSettings.cs" />
+    <Compile Include="Requests\SearchOptions.cs" />
     <Compile Include="Requests\TagSearchQuery.cs" />
     <Compile Include="Requests\FullTextSearchQuery.cs" />
     <Compile Include="Requests\ImdbSearchQuery.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Responses\ImdbSearchResultCollection.cs" />
     <Compile Include="Responses\Language.cs" />
     <Compile Include="Responses\LanguageCollection.cs" />
+    <Compile Include="OSDbException.cs" />
     <Compile Include="Responses\OSDbResponse.cs" />
     <Compile Include="Responses\ServerInfo.cs" />
     <Compile Include="Responses\Session.cs" />
