Added support for method selection and refactor some things

--- a/Subtle.UI/App.config
+++ b/Subtle.UI/App.config
@@ -18,6 +18,9 @@
                     </ArrayOfString>
                 </value>
             </setting>
+            <setting name="SearchMethods" serializeAs="String">
+                <value>Hash, FullText, Imdb</value>
+            </setting>
         </Subtle.UI.Properties.Settings>
     </userSettings>
 </configuration>
