--- a/Subtle.UI/Subtle.UI.csproj
+++ b/Subtle.UI/Subtle.UI.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Subtle.UI</RootNamespace>
-    <AssemblyName>Subtle</AssemblyName>
+    <AssemblyName>subtle</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
