Implement smart paste hook for IMDb text box

--- a/Subtle.UI/Subtle.UI.csproj
+++ b/Subtle.UI/Subtle.UI.csproj
@@ -50,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\ImdbTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
