Improve registering shell commands by using SystemFileAssociations

--- a/Subtle.Registry/Subtle.Registry.csproj
+++ b/Subtle.Registry/Subtle.Registry.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistryHelper.cs" />
+    <Compile Include="ShellCommandHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
