--- a/Subtle.Gui/Subtle.Gui.csproj
+++ b/Subtle.Gui/Subtle.Gui.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{2D632EA1-56C1-4910-9CCD-D6216FD65273}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Subtle.UI</RootNamespace>
+    <RootNamespace>Subtle.Gui</RootNamespace>
     <AssemblyName>subtle</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
