Add hearing impaired symbol for subtitles

--- a/Subtle.Gui/Subtle.Gui.csproj
+++ b/Subtle.Gui/Subtle.Gui.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Content Include="Resources\FeaturedIcon.png" />
     <Content Include="Resources\HashIcon.png" />
+    <Content Include="Resources\HearingImpaired.png" />
     <Content Include="Resources\ImdbIcon.png" />
     <Content Include="Resources\TextSearchIcon.png" />
   </ItemGroup>
