--- a/Subtle.Gui/Subtle.Gui.csproj
+++ b/Subtle.Gui/Subtle.Gui.csproj
@@ -56,6 +56,12 @@
     <Compile Include="Controls\ImdbTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="LanguagesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LanguagesForm.Designer.cs">
+      <DependentUpon>LanguagesForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +76,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\SearchMethod.cs" />
     <Compile Include="ViewModels\SubtitleViewModel.cs" />
+    <EmbeddedResource Include="LanguagesForm.resx">
+      <DependentUpon>LanguagesForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
