--- a/Subtle.Gui/packages.config
+++ b/Subtle.Gui/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="4.0.4" targetFramework="net452" />
+  <package id="Octokit" version="0.17.0" targetFramework="net452" />
 </packages>
