--- a/Subtle.Gui/Subtle.Gui.csproj
+++ b/Subtle.Gui/Subtle.Gui.csproj
@@ -84,6 +84,11 @@
     <Compile Include="Mapping\OSDbProfile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="ViewModels\SearchMethod.cs" />
     <Compile Include="ViewModels\SubtitleViewModel.cs" />
     <EmbeddedResource Include="AboutForm.resx">
@@ -97,14 +102,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -131,7 +131,7 @@
   <ItemGroup>
     <Content Include="Resources\FeaturedIcon.png" />
     <Content Include="Resources\HashIcon.png" />
-    <Content Include="Resources\HearingImpaired.png" />
+    <Content Include="Resources\HearingImpairedIcon.png" />
     <Content Include="Resources\ImdbIcon.png" />
     <Content Include="Resources\TextSearchIcon.png" />
   </ItemGroup>
