--- a/Subtle.Model/Subtle.Model.csproj
+++ b/Subtle.Model/Subtle.Model.csproj
@@ -34,6 +34,10 @@
       <HintPath>..\packages\xmlrpcnet.3.0.0.266\lib\net20\CookComputing.XmlRpcV2.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,8 +51,9 @@
     <Compile Include="FileTypes.cs" />
     <Compile Include="Helpers\Crypto.cs" />
     <Compile Include="Helpers\Gzip.cs" />
-    <Compile Include="Helpers\ImdbHelper.cs" />
+    <Compile Include="Helpers\VideoInfo.cs" />
     <Compile Include="IOSDbProxy.cs" />
+    <Compile Include="OmdbClient.cs" />
     <Compile Include="OSDbClient.cs" />
     <Compile Include="OSDbConfig.cs">
       <AutoGen>True</AutoGen>
