Implement proper async in OSDb operations

--- a/Subtle.Model/Subtle.Model.csproj
+++ b/Subtle.Model/Subtle.Model.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Responses\SubtitleFileCollection.cs" />
     <Compile Include="Responses\SubtitleSearchResult.cs" />
     <Compile Include="Responses\SubtitleSearchResultCollection.cs" />
+    <Compile Include="TaskExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
