--- a/Subtle.Gui/Properties/Settings.settings
+++ b/Subtle.Gui/Properties/Settings.settings
@@ -8,7 +8,7 @@
   &lt;string&gt;eng&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
-    <Setting Name="SearchMethods" Type="Subtle.UI.ViewModels.SearchMethod" Scope="User">
+    <Setting Name="SearchMethods" Type="Subtle.Model.Models.SearchMethod" Scope="User">
       <Value Profile="(Default)">Hash, FullText, Imdb</Value>
     </Setting>
   </Settings>
