--- a/Subtle.Cli/packages.config
+++ b/Subtle.Cli/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="4.0.4" targetFramework="net452" />
   <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
 </packages>
