--- a/Subtle.Gui/App.config
+++ b/Subtle.Gui/App.config
@@ -19,6 +19,9 @@
                     </ArrayOfString>
                 </value>
             </setting>
+            <setting name="SearchMethods" serializeAs="String">
+                <value>Hash, FullText, Imdb</value>
+            </setting>
         </Subtle.Gui.Properties.Settings>
         <Subtle.UI.Properties.Settings>
             <setting name="Languages" serializeAs="Xml">
