--- a/Subtle.Gui/App.config
+++ b/Subtle.Gui/App.config
@@ -22,6 +22,9 @@
             <setting name="SearchMethods" serializeAs="String">
                 <value>Hash, FullText, Imdb</value>
             </setting>
+            <setting name="OSDbTimeout" serializeAs="String">
+                <value>00:00:20</value>
+            </setting>
         </Subtle.Gui.Properties.Settings>
         <Subtle.UI.Properties.Settings>
             <setting name="Languages" serializeAs="Xml">
